MODULES = BuildTests.cmake.in \
  CreateDoxyFile.cmake        \
  FinalizeHeadercheck.cmake   \
  FindFiles.cmake             \
  InstallFile.cmake           \
  RunDoxygen.cmake

modulesdir = $(datadir)/cmake/scripts
dist_modules_DATA = ${MODULES}

include $(top_srcdir)/am/global-rules
EXTRA_DIST = CMakeLists.txt
